# RedditSentimentAnalyzer

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOC-RECONCILIATION.md  README.md  ROADMAP.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
backend/: config.py  main.py
backend/api/: schemas.py
backend/api/routes/: posts.py  sentiment.py  spikes.py
backend/db/: connection.py  queries.py  schema.sql
backend/ingestion/: ingest_daemon.py  post_processor.py  praw_client.py
backend/llm/: escalation.py
docs/: PORTFOLIO-DISPOSITION.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: SentimentBadge.jsx  SpikeDetailPanel.jsx  SubredditSelector.jsx  TimeRangePicker.jsx  ViewTabs.jsx
frontend/src/views/: ComparisonView.jsx  TimeSeriesView.jsx  WordCloudView.jsx
scripts/: seed_subreddits.py  setup_keyring.py
tests/: test_api_routes.py  test_bucket_queries.py  test_config.py  test_connection.py  test_escalation.py  test_post_processor.py  test_queries.py  test_rate_limiter.py  test_term_queries.py
